--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "get-tweets": "ts-node scripts/get-tweets.ts",
     "lighthouse": "npx lhci autorun",
     "lint": "concurrently npm:lint:*",
-    "lint:eslint": "eslint . --ext .ts",
+    "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
     "lint:stylelint": "stylelint \"src/**/*.scss\"",
     "serve": "npm run build && firebase emulators:start",
@@ -54,6 +54,7 @@
     "@babel/core": "7.28.5",
     "@babel/plugin-transform-runtime": "7.28.5",
     "@babel/preset-env": "7.28.5",
+    "@eslint/js": "^9.17.0",
     "@lhci/cli": "^0.15.1",
     "@types/copy-webpack-plugin": "10.1.0",
     "@types/html-webpack-plugin": "3.2.9",
@@ -62,16 +63,15 @@
     "@types/node": "24.10.1",
     "@types/webfontloader": "1.6.38",
     "@types/webpack": "5.28.5",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
     "babel-loader": "10.0.0",
     "concurrently": "9.1.2",
     "copy-webpack-plugin": "13.0.0",
     "css-loader": "7.1.2",
-    "eslint": "8.57.0",
-    "eslint-plugin-import": "2.29.1",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "firebase-tools": "14.27.0",
+    "globals": "^16.5.0",
     "html-webpack-plugin": "5.6.3",
     "mini-css-extract-plugin": "2.9.4",
     "prettier": "3.5.3",
@@ -87,6 +87,7 @@
     "ts-loader": "9.5.2",
     "ts-node": "10.9.2",
     "typescript": "5.9.3",
+    "typescript-eslint": "^8.18.2",
     "webpack": "5.99.5",
     "webpack-cli": "6.0.1",
     "workbox-webpack-plugin": "7.3.0"
