--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,10 @@ jobs:
     name: Test
     steps:
       - uses: actions/checkout@v6
+      - uses: actions/setup-java@v5
+        with:
+          distribution: 'temurin'
+          java-version: '21'
       - run: npm ci
       - run: npx firebase use abraham-d3850
       - run: npm run test
